log
Thu May  5 01:10:34 UTC 2022: 
 heap.c | 34 +++++++++++++++++++++++++++++++---
 1 file changed, 31 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:43:41: error: comparison between pointer and integer [-Werror]
    if (pq->heapArray[pq->size].priority == NULL){
                                         ^~
cc1: all warnings being treated as errors
Compilation failed
bb76feb
Thu May  5 01:10:53 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:43:32: error: invalid operands to binary == (have ‘heapElem {aka struct nodo}’ and ‘void *’)
    if (pq->heapArray[pq->size] == NULL){
        ~~~~~~~~~~~~~~~~~~~~~~~ ^~
Compilation failed
5f5339a
Thu May  5 01:11:02 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 5/70
a256d40
Thu May  5 01:12:25 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 15/70
bffef92
Thu May  5 01:15:40 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 15/70
06945aa
Thu May  5 01:16:19 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 15/70
112fd41
Thu May  5 01:16:30 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 15/70
095cf14
Thu May  5 01:26:08 UTC 2022: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 15/70
108e122
Thu May  5 01:28:43 UTC 2022: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|3
total_score: 15/70
bc34734
Thu May  5 01:32:52 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 15/70
aa35a70
Thu May  5 01:33:18 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:60:26: error: expected ‘,’ or ‘;’ before ‘)’ token
    int parent = (aux-1)/2);
                          ^
heap.c:65:28: error: expected ‘;’ before ‘)’ token
       parent = (parent-1)/2);
                            ^
heap.c:65:28: error: expected statement before ‘)’ token
Compilation failed
061e0cf
Thu May  5 01:33:25 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 15/70
4caefe5
Thu May  5 01:35:58 UTC 2022: 
 heap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  2|3
total_score: 15/70
ac145e1
Thu May  5 01:37:05 UTC 2022: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|3
total_score: 15/70
28eb0d5
Thu May  5 01:38:06 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:45:27: error: incompatible types when returning type ‘heapElem {aka struct nodo}’ but ‘void *’ was expected
       return pq->heapArray[0];
              ~~~~~~~~~~~~~^~~
Compilation failed
ff89182
